Fix styling for map/list toggle on Listings index. Remove horiz scrollbar from fitler categories.

--- a/frontend/src/components/Listings/ListingsIndex.css
+++ b/frontend/src/components/Listings/ListingsIndex.css
@@ -233,16 +233,15 @@
 	/* left: 50%; */
 	/* transform: translateX(-50%); */
 	/* position: fixed; */
+	width: 100%;
 	height: 0px;
-	position: sticky;
+	position: fixed;
 	display: flex;
 	justify-content: center;
 }
 
 .index-map-toggle-container {
-	/* width: 132.45px; */
 	height: var(--toggle-map-btn-height);
-	background-color: pink;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -254,7 +253,7 @@
 	font-size: 14px;
 	font-weight: 400;
 	cursor: pointer;
-	transform-origin: 0%, 0%;
+	transform-origin: 50% 50%;
 	transition: transform 0.25s, box-shadow 0.25s;
 }
 
